--- a/Assessment One/Task Three/Task3.scss
+++ b/Assessment One/Task Three/Task3.scss
@@ -1,9 +1,11 @@
+/*These variables store color codes, likely used for styling lines, backgrounds, or various elements throughout the website.*/
 $clr-line1: #4e89ae;
 $clr-line2: #43658b;
 $clr-line3: #ed6663;
 $clr-line4: #ffa372;
 
-$crcl1-width: 70px;    /* These are the circle width & height and line color */
+/*These define sizes (width and height) of circles, potentially used for visual elements like icons, buttons, or decorative elements.*/
+$crcl1-width: 70px;
 $crcl1-height: 70px;
 
 $crcl2-width: 80px;
@@ -15,6 +17,7 @@ $crcl3-height: 90px;
 $crcl4-width: 100px;
 $crcl4-height: 100px;
 
+/* Defines a color used for hover effects, which might change the color of elements when users hover over them with the mouse.*/
 $hover-color: #444;
 $footer-height: 50px;
 
@@ -30,17 +33,14 @@ $header-footer-clr: #8ccff7;
     background-color: #dadfe4;
 }
 
+/*class includes the centerElement mixin. This class would be applied to an HTML element (like a div)
+and would center its content both horizontally and vertically within the specified width and height.
+This mixin saves repetitive code and simplifies the process of centering elements using Flexbox properties.*/
 @mixin centerElement {
     display: flex;
     justify-content: center;
     align-items: center;
   }
-
-/*.header {
-    background-color: $header-footer-clr;
-    display: flex;
-    justify-content: center;
-}*/
 
 footer {
     width: 100%;
@@ -76,8 +76,8 @@ footer {
 
 .circles {
     display: flex;
-    justify-content: center; /* Aligns circles equally horizontally */
-    align-items: center; /* Centers vertically */
+    justify-content: center; /*aligns circles equally horizontally*/
+    align-items: center; /*centers vertically*/
     margin-top: 3%;
     margin-bottom: 30px;
     gap: 6px;
@@ -86,52 +86,61 @@ footer {
 .c1 {
     width: $crcl1-width;
     height: $crcl1-width;
-    clip-path: circle(50% at center); /* Create a circle shape */
+    clip-path: circle(50% at center); /*create a circle shape */
 }
 
 .c2 {
     width: $crcl2-width;
     height: $crcl2-height;
-    clip-path: circle(50% at center); /* Create a circle shape */
+    clip-path: circle(50% at center);
 }
 
 .c3 {
     width: $crcl3-width;
     height: $crcl3-height;
-    clip-path: circle(50% at center); /* Create a circle shape */
+    clip-path: circle(50% at center);
 }
 
 .c4 {
     width: $crcl4-width;
     height: $crcl4-height;
-    clip-path: circle(50% at center); /* Create a circle shape */
+    clip-path: circle(50% at center);
 }
 
+/*A set of guidelines to be followed while lingering over items with particular classes is defined in this block.
+focuses on items that have the designated classes when they are hovering. When hovered, changes the text color to the value
+kept in the $hover-color variable.*/
 .s1:hover, .s2:hover, .s3:hover, .s4:hover,
 .c1:hover, .c2:hover, .c3:hover, .c4:hover {
     color: $hover-color;
     background-color: $hover-color;
 }
 
+/*When included within a class or selector using @include, the image-size mixin is intended to make it simple to set the background
+image and dimensions of an element by giving parameters for the image URL, width, and height.*/
 @mixin image-size($url, $width, $height) {
     background-image: url($url);
     width: $width;
     height: $height;
   }
 
+  /* Media queries for Desktop */
+  /*Elements with the.img1 class have their background image and dimensions set using the mixin image-size.
+  It establishes the element's width and height to 400 pixels apiece and provides the URL of the background image ("400x400.png").*/
   @media (min-width: 801px) {
     .img1 {
-      @include image-size("400x400.png", 400px, 400px); /* Media queries for Desktop */
+      @include image-size("400x400.png", 400px, 400px);
     }
     .images {
-      background-color: #8ccff7;
+      background-color: #8ccff7;/*Sets the background color of elements with the .images class to a shade of blue (#8ccff7).*/
       @include centerElement;
     }
   }
 
+  /* Media queries for tablet */
   @media (max-width: 800px) and (min-width: 768px) {
     .img2 {
-      @include image-size("300x300.png", 300px, 300px); /* Media queries for tablet */
+      @include image-size("300x300.png", 300px, 300px);
     }
     .images {
       background-color: #8ccff7;
@@ -143,9 +152,10 @@ footer {
 
   }
   
+  /* Media queries for phone */
   @media (max-width: 767px) {
     .img3 {
-      @include image-size("200x200.png", 200px, 200px); /* Media queries for phone */
+      @include image-size("200x200.png", 200px, 200px);
     }
     .images {
       background-color: #8ccff7;
